# office-reader

./: .gitignore  CMakeLists.txt  README.md
pptx/: CMakeLists.txt
pptx/include/: PresentationProperties.h  Resource.h  Shape.h  presentation.h  slide.h  type.h
pptx/include/Shape/: TextShape.h
pptx/include/utils/: Text.h
pptx/src/: reader.h
